update configuration file